add assignments with for loop